--- a/demo8/package.json
+++ b/demo8/package.json
@@ -11,15 +11,15 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
-    "vue": "^2.5.2",
-    "vue-lazyload": "^1.2.6",
-    "vue-router": "^3.0.1",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
-    "express": "~4.16.0",
+    "express": "^4.16.4",
     "http-errors": "~1.6.2",
     "jade": "~1.11.0",
-    "morgan": "~1.9.0"
+    "morgan": "~1.9.0",
+    "vue": "^2.5.2",
+    "vue-lazyload": "^1.2.6",
+    "vue-router": "^3.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
