--- a/demo8/package.json
+++ b/demo8/package.json
@@ -18,6 +18,7 @@
     "jade": "~1.11.0",
     "morgan": "~1.9.0",
     "vue": "^2.5.2",
+    "vue-infinite-scroll": "^2.0.2",
     "vue-lazyload": "^1.2.6",
     "vue-router": "^3.0.1"
   },
